# booking-headless

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  README.md  docker-compose.yml  example.env
.sqlx/: query-0aa6fcafe9159e58b28af706acfd9f5dc58e81a5c02cf19ccc4e4c0eae524f25.json  query-18a3c23882e3fbc8b88ea3720327955356c85c969dcec39ddfdb1b11abe78f44.json  query-201a8de38b73e7b6483a13051be07562f89ed8ae740816a8e59ef2c87ccb6ee3.json  query-2a428b56d3f1046cefd723ee8510507188ff10c318833d27faeccbcc60fffce3.json  query-3175d2ef113bf3d832f32bd6f7c9a1eb98844f626d6688c2b4da84c329f3fc03.json  query-46dd8f5e26923aa09decce1220f8a40beb81a2a6aaa66026a679902c3617688e.json  query-480b4c7505900505c8b07076dd926f6be1c3fc0e53d87286412cffe8889f3041.json  query-587f9d8c7381e3cdcb6145664e3930cec2aebebd0d9635fc8db62181cbfa63a3.json  query-5cd875dd503263ec097cc8514ec8b8f2ee7db1be55b3b805a17f1fd358e93ee2.json  query-5d22a9f59a17c95aa27e3cd841e4b9068702da815003b0bc0818234ccf168ca4.json  query-5dd4cbc824197ebe7db150bae1f37e1b45930feda56dbf6b977df7c62c503947.json  query-67814ea51512a6f7b5709fb60557bf0cccaa0b751b8d0da649bc26d6cc5ebc8a.json  query-6884f8c9d38ca2cea1b76740dd587e10e5c013afb12f1921539f38bde408c419.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-87d8f29dfeebe82087217d6bb2ea0fd2926fefcf0b248d999fcd2c04c1c7cc85.json  query-90410a95136e7c662967bf13515ae452d923fcf7b290c79b30da76f8ececa1b5.json  query-94bf9adf5e4ddc0cf4a9393fef844bf9ad961de75ce9ec813ad67b11ad1f234b.json  (+8 more)
migrations/: 20251101135200_create_initial_tables.sql
src/: main.rs  (+1 more)
(+18 files in other folders)
