[package]
name = "booking"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
zod-rs = "0.2.0"
